--- a/.env.example
+++ b/.env.example
@@ -1,39 +1,148 @@
-# MuscleFormAnalyzer 環境変数設定例
-# このファイルを .env としてコピーして、実際の値を設定してください
+# BodyScale Pose Analyzer - Environment Configuration Template
+# Copy this file to .env.local and update values for local development
 
-# データベース設定（PostgreSQL）
-PGHOST=localhost
-PGPORT=5432
-PGDATABASE=muscleform_db
-PGUSER=postgres
-PGPASSWORD=your_password_here
+# === Server Configuration ===
+FLASK_ENV=development
+FLASK_DEBUG=True
+FLASK_APP=app.py
+SESSION_SECRET=your-secret-key-here-change-in-production
+HOST=0.0.0.0
+PORT=5000
+BACKEND_URL=http://localhost:5000
+FRONTEND_URL=http://localhost:3000
 
-# SQLiteを使用する場合（開発環境用）
-USE_SQLITE=false
-SQLITE_DB_PATH=muscleform.db
+# === Database Configuration ===
+DATABASE_URL=sqlite:///./bodyscale_local.db
+# For PostgreSQL (optional):
+# DATABASE_URL=postgresql://user:password@localhost:5432/bodyscale_dev
 
-# セッション設定
-SESSION_SECRET=your-secret-key-here-change-this-in-production
+# Redis Configuration (optional for caching)
+REDIS_URL=redis://localhost:6379/0
 
-# 環境設定
-ENV=development
+# === CORS Configuration ===
+CORS_ORIGINS=http://localhost:3000,http://localhost:3001
 
-# Firebase認証設定（オプション）
-FIREBASE_API_KEY=your-firebase-api-key
-FIREBASE_AUTH_DOMAIN=your-project.firebaseapp.com
-FIREBASE_PROJECT_ID=your-project-id
-FIREBASE_STORAGE_BUCKET=your-project.appspot.com
-FIREBASE_MESSAGING_SENDER_ID=your-sender-id
-FIREBASE_APP_ID=your-app-id
+# === ML Model Configuration ===
+# MODEL_MODE options: 
+# - lite: Lightweight, Replit-compatible, CPU-only
+# - advanced: Requires GPU, high accuracy, slower
+MODEL_MODE=lite
 
-# アプリケーション設定
-UPLOAD_MAX_SIZE_MB=50
-ALLOWED_VIDEO_EXTENSIONS=mp4,mov,avi,webm
+# Advanced Model Settings (only used when MODEL_MODE=advanced)
+USE_3D_POSE=false
+USE_MOTION_ANALYSIS=false
+USE_PERSONALIZATION=false
+ENSEMBLE_MODELS=false
 
-# 機械学習設定
-ML_MODEL_PATH=ml/models/
-ML_ENABLE_GPU=false
+# Model paths and settings
+ML_MODELS_PATH=./ml/models
+ENABLE_ML_FEATURES=true
+MODEL_CACHE_SIZE=1000
 
-# ログ設定
-LOG_LEVEL=INFO
-LOG_FILE=muscleform.log
+# === Pose Detection Settings ===
+# MediaPipe configuration
+POSE_MODEL_COMPLEXITY=1  # 0=lite, 1=full, 2=heavy
+MIN_DETECTION_CONFIDENCE=0.7
+MIN_TRACKING_CONFIDENCE=0.7
+SMOOTH_LANDMARKS=true
+ENABLE_SEGMENTATION=false
+
+# Video processing settings
+MAX_FPS=30
+VIDEO_WIDTH=1280
+VIDEO_HEIGHT=720
+BUFFER_SIZE=5  # Frames to buffer for temporal analysis
+
+# === Data Collection Settings ===
+ENABLE_DATA_COLLECTION=false
+DATA_COLLECTION_CONSENT_REQUIRED=true
+DATA_RETENTION_DAYS=365
+DATA_STORAGE_PATH=./ml/data
+ANONYMIZE_USER_DATA=true
+MIN_QUALITY_SCORE_FOR_COLLECTION=0.6
+
+# === File Upload Settings ===
+UPLOAD_FOLDER=./static/videos
+MAX_CONTENT_LENGTH=52428800  # 50MB in bytes
+ALLOWED_EXTENSIONS=mp4,mov,avi,webm
+TEMP_UPLOAD_FOLDER=./static/temp
+
+# === Feature Flags ===
+ENABLE_MEAL_ANALYSIS=true
+ENABLE_EXERCISE_DATABASE=true
+ENABLE_PHASE_DETECTION=true
+ENABLE_ADVANCED_FEEDBACK=true
+ENABLE_TRAINING_DATA_COLLECTION=true
+ENABLE_ADVANCED_ANALYTICS=true
+ENABLE_REAL_TIME_ANALYSIS=true
+ENABLE_BIOMECHANICS_ANALYSIS=false  # Requires advanced mode
+
+# === Performance Optimization ===
+CACHE_ANALYSIS_RESULTS=true
+CACHE_TTL_SECONDS=300
+PARALLEL_PROCESSING=true
+MAX_WORKERS=4
+GPU_MEMORY_FRACTION=0.3  # For TensorFlow GPU memory allocation
+
+# === UI/UX Settings ===
+SHOW_CONFIDENCE_SCORES=true
+SHOW_PROCESSING_TIME=false
+ENABLE_DEBUG_OVERLAY=false
+SHOW_LANDMARK_INDICES=false
+CAMERA_GUIDE_ENABLED=true
+AUTO_START_RECORDING=false
+
+# === Privacy Settings ===
+BLUR_FACES_IN_RECORDINGS=false
+SAVE_ANALYSIS_FRAMES=false
+DELETE_VIDEOS_AFTER_ANALYSIS=true
+HASH_USER_IDENTIFIERS=true
+
+# === API Keys (optional) ===
+# OPENAI_API_KEY=your-api-key-here
+# GOOGLE_CLOUD_API_KEY=your-api-key-here
+
+# === Firebase Configuration (optional) ===
+FIREBASE_API_KEY=
+FIREBASE_AUTH_DOMAIN=
+FIREBASE_PROJECT_ID=
+FIREBASE_STORAGE_BUCKET=
+FIREBASE_MESSAGING_SENDER_ID=
+FIREBASE_APP_ID=
+
+# === Logging Configuration ===
+LOG_LEVEL=INFO  # DEBUG, INFO, WARNING, ERROR, CRITICAL
+LOG_FILE=./logs/bodyscale_analyzer.log
+LOG_MAX_SIZE=10485760  # 10MB
+LOG_BACKUP_COUNT=5
+LOG_FORMAT=%(asctime)s - %(name)s - %(levelname)s - %(message)s
+
+# === Development Settings ===
+AUTO_RELOAD=true
+TEMPLATES_AUTO_RELOAD=true
+SEND_FILE_MAX_AGE_DEFAULT=0
+PROFILE_PERFORMANCE=false
+SAVE_TIMING_METRICS=false
+
+# === Integration Settings ===
+WEBHOOK_URL=
+WEBHOOK_EVENTS=analysis_complete,error
+API_RATE_LIMIT=100  # Requests per minute
+API_TIMEOUT=30  # Seconds
+
+# === Localization ===
+DEFAULT_LANGUAGE=ja
+SUPPORTED_LANGUAGES=ja,en,ko,zh
+AUTO_DETECT_LANGUAGE=true
+
+# === Error Handling ===
+SENTRY_DSN=
+ERROR_REPORTING_ENABLED=false
+SEND_ERROR_EMAILS=false
+ERROR_EMAIL_RECIPIENTS=
+
+# === Backup and Recovery ===
+AUTO_BACKUP_ENABLED=false
+BACKUP_INTERVAL_HOURS=24
+BACKUP_RETENTION_DAYS=30
+BACKUP_PATH=./backups
