--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "react-chartjs-2": "^5.2.0",
     "uuid": "^9.0.1",
     "@radix-ui/react-dialog": "^1.0.5",
+    "@supabase/supabase-js": "^2.39.0",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-progress": "^1.0.3",
