--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,20 +1,22 @@
 {
-  "name": "bodyscale-frontend",
-  "version": "0.1.0",
+  "name": "muscle-form-analyzer-frontend",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "@mediapipe/pose": "^0.5.1675469404",
-    "@mediapipe/camera_utils": "^0.3.1675466862",
-    "@mediapipe/drawing_utils": "^0.3.1675466124",
     "next": "14.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "typescript": "^5.3.3",
+    "@mediapipe/pose": "^0.5.1675469404",
+    "@mediapipe/camera_utils": "^0.3.1675466862",
+    "@mediapipe/drawing_utils": "^0.3.1675466124",
     "firebase": "^10.7.1",
     "axios": "^1.6.2",
     "recharts": "^2.10.3",
@@ -40,7 +42,8 @@
     "lucide-react": "^0.303.0",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
-    "next-themes": "^0.2.1"
+    "next-themes": "^0.2.1",
+    "framer-motion": "^10.16.16"
   },
   "devDependencies": {
     "@types/node": "^20.10.6",
@@ -51,7 +54,10 @@
     "eslint": "^8.56.0",
     "eslint-config-next": "14.1.0",
     "postcss": "^8.4.33",
-    "tailwindcss": "^3.4.0",
-    "typescript": "^5.3.3"
+    "tailwindcss": "^3.4.0"
+  },
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=9.0.0"
   }
 }
