Fix Vercel: Simplify configuration to resolve runtime error

--- a/vercel.json
+++ b/vercel.json
@@ -1,26 +1,7 @@
 {
-  "version": 2,
-  "framework": "nextjs",
-  "buildCommand": "cd frontend && npm run build",
+  "buildCommand": "cd frontend && npm install && npm run build",
   "outputDirectory": "frontend/.next",
-  "installCommand": "cd frontend && npm install",
-  "devCommand": "cd frontend && npm run dev",
-  "ignoreCommand": "git diff --quiet HEAD^ HEAD ./frontend/",
-  "headers": [
-    {
-      "source": "/(.*)",
-      "headers": [
-        {
-          "key": "X-Frame-Options",
-          "value": "DENY"
-        },
-        {
-          "key": "X-Content-Type-Options",
-          "value": "nosniff"
-        }
-      ]
-    }
-  ],
+  "framework": "nextjs",
   "rewrites": [
     {
       "source": "/api/backend/(.*)",
