--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "dev": "cd frontend && npm run dev",
     "build": "cd frontend && npm run build",
     "start": "cd frontend && npm run start",
-    "install": "cd frontend && npm install"
+    "install": "cd frontend && npm install",
+    "vercel-build": "cd frontend && npm install && npm run build"
+  },
+  "dependencies": {
+    "next": "14.1.0"
   },
   "engines": {
     "node": ">=18.0.0",
