Fix Google OAuth configuration and add missing PWA files
- Add manifest.json with PWA configuration
- Add favicon.ico placeholder
- Enhance OAuth error handling with detailed messages
- Create GOOGLE_OAUTH_FIX.md with step-by-step guide
- Update AuthProvider with better error diagnostics

--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -4,5 +4,49 @@
       "source": "/api/backend/:path*",
       "destination": "https://muscleformanalyzer-production.up.railway.app/:path*"
     }
+  ],
+  "headers": [
+    {
+      "source": "/(.*)",
+      "headers": [
+        {
+          "key": "Permissions-Policy",
+          "value": "camera=(self), microphone=(self), geolocation=(self)"
+        },
+        {
+          "key": "X-Content-Type-Options",
+          "value": "nosniff"
+        },
+        {
+          "key": "X-Frame-Options",
+          "value": "DENY"
+        },
+        {
+          "key": "X-XSS-Protection",
+          "value": "1; mode=block"
+        },
+        {
+          "key": "Referrer-Policy",
+          "value": "strict-origin-when-cross-origin"
+        },
+        {
+          "key": "Strict-Transport-Security",
+          "value": "max-age=31536000; includeSubDomains; preload"
+        }
+      ]
+    },
+    {
+      "source": "/manifest.json",
+      "headers": [
+        {
+          "key": "Content-Type",
+          "value": "application/manifest+json"
+        },
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=3600"
+        }
+      ]
+    }
   ]
 }
