feat: Add training data system, PWA icons, and Railway optimizations
- Implement comprehensive training data collection system
- Add analyze, progress, and history pages
- Fix manifest.json 404 error with PWA icons
- Optimize Railway deployment for cost reduction:
  - Add sleep after 30min inactive
  - Set resource limits (1GB RAM, 0.5 CPU)
  - Multi-stage Docker build
  - Video optimization service
  - Redis caching support
- Update frontend metadata and app title

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,5 +1,5 @@
-# Use Python 3.11 slim image for better performance
-FROM python:3.11-slim
+# Multi-stage build for optimized image size
+FROM python:3.11-slim as builder
 
 # Set environment variables
 ENV PYTHONDONTWRITEBYTECODE=1 \
@@ -7,13 +7,31 @@ ENV PYTHONDONTWRITEBYTECODE=1 \
     PIP_NO_CACHE_DIR=1 \
     PIP_DISABLE_PIP_VERSION_CHECK=1
 
-# Set work directory
 WORKDIR /app
 
-# Install system dependencies
-RUN apt-get update && apt-get install -y \
+# Install build dependencies
+RUN apt-get update && apt-get install -y --no-install-recommends \
     build-essential \
     libpq-dev \
+    && rm -rf /var/lib/apt/lists/*
+
+# Copy and install Python dependencies
+COPY requirements.txt .
+RUN pip install --no-cache-dir --user -r requirements.txt
+
+# Final stage
+FROM python:3.11-slim
+
+# Set environment variables
+ENV PYTHONDONTWRITEBYTECODE=1 \
+    PYTHONUNBUFFERED=1 \
+    PATH=/home/app/.local/bin:$PATH
+
+WORKDIR /app
+
+# Install runtime dependencies only
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    libpq5 \
     libgl1-mesa-glx \
     libglib2.0-0 \
     libsm6 \
@@ -26,12 +44,11 @@ RUN apt-get update && apt-get install -y \
 # Create non-root user
 RUN useradd --create-home --shell /bin/bash app
 
-# Copy requirements and install Python dependencies
-COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
+# Copy Python dependencies from builder
+COPY --from=builder --chown=app:app /root/.local /home/app/.local
 
 # Copy application code
-COPY . .
+COPY --chown=app:app . .
 
 # Create necessary directories
 RUN mkdir -p /app/uploads /app/logs && \
@@ -47,5 +64,5 @@ EXPOSE 8000
 HEALTHCHECK --interval=30s --timeout=30s --start-period=5s --retries=3 \
     CMD curl -f http://localhost:8000/health || exit 1
 
-# Default command - use absolute path to startup script
+# Run with optimized settings
 CMD ["python", "startup.py"]
