--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -45,6 +45,10 @@
         {
           "key": "Cache-Control",
           "value": "public, max-age=3600"
+        },
+        {
+          "key": "Access-Control-Allow-Origin",
+          "value": "*"
         }
       ]
     }
