--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,9 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "type-check": "tsc --noEmit",
-    "check-env": "node scripts/check-env.js",
-    "prebuild": "node scripts/check-env.js"
+    "type-check": "tsc --noEmit"
   },
   "dependencies": {
     "next": "14.1.0",
