Fix Next.js deployment error - add missing UI components
- Create missing textarea.tsx and select.tsx components
- Fix import issues in TrainingRecord component
- Add component validation script
- Enhance CI/CD pipeline with component checks
- Add comprehensive deployment solution documentation

This resolves 'Module not found' errors for UI components

--- a/.github/workflows/pre-deploy-check.yml
+++ b/.github/workflows/pre-deploy-check.yml
@@ -25,6 +25,11 @@ jobs:
           cd frontend
           npm ci
       
+      - name: Validate UI Components
+        run: |
+          cd frontend
+          node scripts/validate-components.js
+      
       - name: Type check
         run: |
           cd frontend
