Complete TENAX FIT branding update and Google OAuth fixes
- Rebrand app from MuscleFormAnalyzer/BODYSCAANALYZER to TENAX FIT
- Update all display names, metadata, and configuration files
- Add comprehensive Google OAuth error handling and diagnostics
- Fix Firebase authentication domain configuration
- Add debugging tools and documentation for OAuth setup
- Update storage keys to use tenaxfit prefix
- Improve error messages with detailed setup instructions

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,4 +1,4 @@
-# Frontend Dockerfile for BodyScale Pose Analyzer
+# Frontend Dockerfile for TENAX FIT
 FROM node:18-alpine
 
 # Set working directory
