--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -7,7 +7,7 @@ NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=your-sender-id
 NEXT_PUBLIC_FIREBASE_APP_ID=your-app-id
 
 # Backend API URL
-NEXT_PUBLIC_API_URL=https://muscleformanalyzer-production.up.railway.app
+NEXT_PUBLIC_API_URL=https://tenaxfit-production.up.railway.app
 
 # Supabase Configuration (if using)
 NEXT_PUBLIC_SUPABASE_URL=your-supabase-url
