--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "muscle-form-analyzer-frontend",
+  "name": "tenax-fit-frontend",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -10,25 +10,10 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "next": "14.1.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "typescript": "^5.3.3",
-    "@mediapipe/pose": "^0.5.1675469404",
     "@mediapipe/camera_utils": "^0.3.1675466862",
     "@mediapipe/drawing_utils": "^0.3.1675466124",
-    "firebase": "^10.7.1",
-    "axios": "^1.6.2",
-    "recharts": "^2.10.3",
-    "date-fns": "^3.0.6",
-    "zustand": "^4.4.7",
-    "react-hook-form": "^7.48.2",
-    "react-hot-toast": "^2.4.1",
-    "chart.js": "^4.4.1",
-    "react-chartjs-2": "^5.2.0",
-    "uuid": "^9.0.1",
+    "@mediapipe/pose": "^0.5.1675469404",
     "@radix-ui/react-dialog": "^1.0.5",
-    "@supabase/supabase-js": "^2.39.0",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-progress": "^1.0.3",
@@ -37,30 +22,46 @@
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
+    "@supabase/supabase-js": "^2.39.0",
+    "axios": "^1.6.2",
+    "chart.js": "^4.4.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "date-fns": "^3.0.6",
+    "firebase": "^10.7.1",
+    "framer-motion": "^10.16.16",
     "lucide-react": "^0.303.0",
+    "next": "14.1.0",
+    "next-auth": "^4.24.11",
+    "next-themes": "^0.2.1",
+    "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.48.2",
+    "react-hot-toast": "^2.4.1",
+    "recharts": "^2.10.3",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
-    "next-themes": "^0.2.1",
-    "framer-motion": "^10.16.16"
+    "typescript": "^5.3.3",
+    "uuid": "^9.0.1",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
+    "@babel/core": "^7.23.7",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-proposal-private-methods": "^7.18.6",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@babel/preset-env": "^7.23.7",
     "@types/node": "^20.10.6",
     "@types/react": "^18.2.46",
     "@types/react-dom": "^18.2.18",
     "@types/uuid": "^9.0.7",
     "autoprefixer": "^10.4.16",
+    "babel-loader": "^9.1.3",
     "eslint": "^8.56.0",
     "eslint-config-next": "14.1.0",
     "postcss": "^8.4.33",
-    "tailwindcss": "^3.4.0",
-    "@babel/core": "^7.23.7",
-    "@babel/preset-env": "^7.23.7",
-    "@babel/plugin-proposal-private-methods": "^7.18.6",
-    "@babel/plugin-proposal-class-properties": "^7.18.6",
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "babel-loader": "^9.1.3"
+    "tailwindcss": "^3.4.0"
   },
   "engines": {
     "node": ">=20.0.0",
